@@ -487,7 +487,9 @@ ot_check_test (StudentFactory_std)
 ot_check_test (SmoothedUniform_std)
 ot_check_test (SquaredNormal_std)
 ot_check_test (Trapezoidal_std)
+if (NOT MSVC AND NOT MINGW)
 ot_check_test (TrapezoidalFactory_std)
+endif ()
 ot_check_test (Triangular_std)
 ot_check_test (TriangularFactory_std)
 ot_check_test (TruncatedDistribution_std)
