@@ -544,7 +544,9 @@ ot_pyinstallcheck_test (SquaredNormal_std)
 ot_pyinstallcheck_test (Student_std)
 ot_pyinstallcheck_test (StudentFactory_std)
 ot_pyinstallcheck_test (Trapezoidal_std)
+if (NOT MINGW)# FIXME: Cobyla doesn't generate NaNs on Mingw
 ot_pyinstallcheck_test (TrapezoidalFactory_std)
+endif ()
 ot_pyinstallcheck_test (Triangular_std)
 ot_pyinstallcheck_test (TriangularFactory_std)
 ot_pyinstallcheck_test (TruncatedDistribution_std)
